--- a/List/list.html
+++ b/List/list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ordered lists</title>
+    <title>Lists</title>
 </head>
 <body>
     <h1><ol><li>What is html?</li></ol></h1>
@@ -209,4 +209,5 @@ Often used for glossaries, FAQs, or any situation where a term needs an explanat
     <li>title</li><br>
 </ol>
 </body>
+
 </html>
