--- a/Forms/bus_pass.html
+++ b/Forms/bus_pass.html
@@ -113,9 +113,10 @@
             </fieldset>
                 <center><img src="./captcha.jpg" width="200">
                     <br>
+                    <input type="text" name="" id="">
+                    <br>
                 <input type="submit"></center>
             </center>
         </form>
     </body>
-
 </html>
